# Electron-3D-framebuffer-Cpp

./: README.md  eslint.config.js  forge.config.ts  package-lock.json  package.json  tsconfig.json
cpp/: CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake  framebuffer_mmap.h  main.cpp  spinning_cube
src/main/: main.ts  preload.ts  socket-utils.ts
src/preload/: preload.ts
src/renderer/: index.tsx
src/renderer/components/: cube-view-container.tsx  cube-view.tsx  dmabuf-view.tsx  pixel-shm-view.tsx  theme-provider.tsx
src/renderer/types/: electron.d.ts
src/renderer/views/: home.tsx
